--- a/template/home.html
+++ b/template/home.html
@@ -11,7 +11,7 @@
      
     <img src="static/chatbot.jpg"  alt="Chatbot Image">
     <h1> Artificial Intelligence ChatBot for University</h1>
-    <h3>Developed by<br> Arbaazkhan R <br>Soudagar</h3>
+    <h3>Developed by<br> Summaiya S <br>Bellary</h3>
     
    
     <div class="homepage">
